# Kalzium

./: 0001-CMakeLists-updation-to-KF5.patch  CMakeLists.txt  CMakeLists.txt~  KalziumCMake.diff  KalziumQt5.diff  README.md  taq
compoundviewer/: CMakeLists.txt  CMakeLists.txt~  kalziumglwidget.cpp  libkdeedu_compoundviewer_export.h  openbabel2wrapper.cpp  openbabel2wrapper.h
compoundviewer/build-test1-Desktop_Qt_5_3_GCC_32bit-Debug/: Makefile
compoundviewer/test1/: libkdeedu_compoundviewer_export.h  mainwindow.cpp  mainwindow.h  test1.pro
compoundviewer/widgets/: CMakeLists.txt
libscience/: CMakeLists.txt~
libscience/tests/: CMakeLists.txt~
makefile2/: CMakeCache.txt  Makefile  cmake_install.cmake  config-kalzium.h  kalzium.cbp  rsa_id.pub
makefile2/compoundviewer/: Makefile  cmake_install.cmake
makefile2/data/: Makefile  cmake_install.cmake
makefile2/data/hazardsymbols/: Makefile  cmake_install.cmake
makefile2/data/htmlview/: Makefile  cmake_install.cmake
makefile2/data/icons/: Makefile  cmake_install.cmake
makefile2/data/iconsets/: Makefile  cmake_install.cmake
makefile2/data/iconsets/school/: cmake_install.cmake
makefile2/data/latticeicons/: Makefile  cmake_install.cmake
makefile2/data/maps/: Makefile  cmake_install.cmake
makefile2/data/molecules/: Makefile  cmake_install.cmake
makefile2/data/toolpics/: Makefile  cmake_install.cmake
makefile2/doc/: Makefile  cmake_install.cmake
makefile2/libscience/: Makefile  cmake_install.cmake
makefile2/libscience/data/: Makefile  cmake_install.cmake
makefile2/libscience/tests/: Makefile  cmake_install.cmake
makefile2/plasmoid/: Makefile  cmake_install.cmake
makefile2/plasmoid/applet/: Makefile  cmake_install.cmake
makefile2/plasmoid/applet/concentrationPlasmoid/: Makefile  cmake_install.cmake  (+1 more)
makefile2/plasmoid/engine/: Makefile  cmake_install.cmake
makefile2/qml/: Makefile  cmake_install.cmake
makefile2/src/: Makefile  cmake_install.cmake
plasmoid/applet/bodr/: CMakeLists.txt
plasmoid/applet/concentrationPlasmoid/: CMakeLists.txt~
src/: CMakeLists.txt  CMakeLists.txt~
(+9 files in other folders)
